--- a/perlin-noise-flowfield/index.html
+++ b/perlin-noise-flowfield/index.html
@@ -3,11 +3,11 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="/Small-Creative-Projects/perlin-noise-flowfield/style.css">
     <meta charset="utf-8" />
 
   </head>
   <body>
-    <script src="/sketch.js"></script>
+    <script src="/Small-Creative-Projects/perlin-noise-flowfield/sketch.js"></script>
   </body>
 </html>
