--- a/rock-paper-scissors-simulator/index.html
+++ b/rock-paper-scissors-simulator/index.html
@@ -16,10 +16,7 @@
     
   </head>
   <body>
-  <h1>
-    hi there
-    </h1>
-     <canvas id="canvas" width="500" height="500"></canvas>
+     <canvas id="canvas"></canvas>
 
   </body>
 </html>
