--- a/pizza-cursor-effect/index.html
+++ b/pizza-cursor-effect/index.html
@@ -6,13 +6,13 @@
     <title>Hello World!</title>
     
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/Small-Creative-Projects/perlin-noise-flowfield/style.css" />
     
         <!-- import Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
+    <script src="/Small-Creative-Projects/perlin-noise-flowfield/script.js" defer></script>
   </head>
   <body>
     <canvas id="canvas"></canvas>
