--- a/pizza-cursor-effect/index.html
+++ b/pizza-cursor-effect/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Hello World!</title>
+    <title>Pizza Pizza</title>
     
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/Small-Creative-Projects/pizza-cursor-effect/style.css" />
@@ -15,6 +15,11 @@
     <script src="/Small-Creative-Projects/pizza-cursor-effect/script.js" defer></script>
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+   <div id="container">
+      <canvas id="canvas"></canvas>
+      <div id="overlay">
+        Drag your cursor or finger over the screen for a surprise
+      </div>
+    </div>
   </body>
 </html>
